# fiofio

./: .gitignore  Taskfile.yml  docker-compose.yml  pyproject.toml
.docker/: Dockerfile
alert-collector/: README.md  Taskfile.yml  alembic.ini  pyproject.toml
alert-collector/.docker/: Dockerfile
alert-collector/nginx/: alert-collector.conf
alert-collector/src/alert_collector/: __init__.py  cli.py  metrics.py  settings.py  singleton.py
alert-collector/tests/api/: conftest.py  test_metrics.py
alert-collector/tests/external_client/: test_client.py
alert-collector/tests/health/: test_prometheus.py  test_service.py
alert-collector/tests/sync/: test_service.py
alert-collector/tests/worker/: test_celery_app.py
docs/: ARCHITECTURE.md  DECISIONS.md  README.md
externalMock/: Taskfile.yml  domain.py  generate.py  main.py  pyproject.toml  validate.py
externalMock/.docker/: Dockerfile
externalMock/src/external_mock/: __init__.py  generate.py  main.py  validate.py
externalMock/tests/: test_alerts.py
prometheus/: prometheus.yml
rabbitmq/: bootstrap.sh  rabbitmq.conf.template
scripts/: generate-rabbitmq-certs.sh
src/alert_collector/: __init__.py  cli.py  logging.py  metrics.py  settings.py
src/alert_collector/api/: __init__.py  app.py
src/alert_collector/db/: __init__.py  base.py  session.py
src/alert_collector/enrichment/: __init__.py  service.py
src/alert_collector/external_client/: __init__.py  (+2 more)
tests/api/: test_alerts_cursor_continuity.py
tests/external_client/: test_client.py
tests/health/: test_service.py
tests/sync/: test_service.py
(+64 files in other folders)
